lustre/llite/file.c
@@ -1378,7 +1378,8 @@ static bool file_is_noatime(const struct file *file)
 	return false;
 }
 
-void ll_io_init(struct cl_io *io, struct file *file, enum cl_io_type iot)
+void ll_io_init(struct cl_io *io, struct file *file, enum cl_io_type iot,
+		struct vvp_io_args *args)
 {
 	struct inode *inode = file_inode(file);
 	struct ll_file_data *fd  = LUSTRE_FPRIVATE(file);
@@ -1391,7 +1392,13 @@ void ll_io_init(struct cl_io *io, struct file *file, enum cl_io_type iot)
 		io->u.ci_wr.wr_sync   = !!(file->f_flags & O_SYNC ||
 					   file->f_flags & O_DIRECT ||
 					   IS_SYNC(inode));
+#ifdef HAVE_GENERIC_WRITE_SYNC_2ARGS
+		io->u.ci_wr.wr_sync  |= !!(args &&
+					   args->via_io_subtype == IO_NORMAL &&
+					   args->u.normal.via_iocb->ki_flags & IOCB_DSYNC);
+#endif
 	}
+
 	io->ci_obj = ll_i2info(inode)->lli_clob;
 	io->ci_lockreq = CILR_MAYBE;
 	if (ll_file_nolock(file)) {
@@ -1465,7 +1472,7 @@ ll_file_io_generic(const struct lu_env *env, struct vvp_io_args *args,
 
 restart:
 	io = vvp_env_thread_io(env);
-	ll_io_init(io, file, iot);
+	ll_io_init(io, file, iot, args);
 	io->ci_ndelay_tried = retried;
 
 	if (cl_io_rw_init(env, io, iot, *ppos, count) == 0) {
